// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > should match the snapshot > horizontal 1`] = `
<body>
  <div>
    <div
      class="flex flex-col gap-2"
    >
      <h1>
        title
      </h1>
      <div
        class="shrink-0 bg-border h-[1px] w-full"
        data-orientation="horizontal"
        role="none"
      />
      <p>
        text
      </p>
    </div>
  </div>
</body>
`;

exports[`Separator > should match the snapshot > vertical 1`] = `
<body>
  <div>
    <div
      class="flex h-5 items-center space-x-4 text-sm"
    >
      <div>
        test 1
      </div>
      <div
        class="shrink-0 bg-border h-full w-[1px]"
        data-orientation="vertical"
        role="none"
      />
      <div>
        test 2
      </div>
    </div>
  </div>
</body>
`;
